# tubemp3

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Destination Calabria (feat. Crystal Waters) (UK Radio Edit)-a7uIJkDydjA.m4a.part  DestinationCalabriafeatCrystalWatersUKRadioEdit.m4a  LICENSE  LasgoSomethingOFFICIALVIDEO.m4a  Mozart: Requiem In D Minor, K.626 - 3. Sequentia: Confutatis.m4a  Pipfile  README.md  getmusic_line.py  info.py  music_info.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  result.json  setup-dev.sh  setup.py  test_api.py  test_download.py  test_get_link.py  test_getmusic.py  test_line.py  test_music.py  test_new_version.py  test_search_plus.py  testing.py
cache/: Linkin Park - Lying From You - Guitar cover - by Eduard Plezer_.webm  Panamericano Agressivo_.webm  like a player wolverine deadpool chor_.webm  the landing_.webm
tests/: test_get_info.py  test_get_link.py  test_music_download.py  testing.py
tubemp3/: __init__.py  api.py  api_deizer.py  file.py  get.py  get_music_line.py  getmusic.py  in_line.py  lib.py  logs.py  metadata.py  tube.py
tubemp3/api/: extract_video_info.py  get_info_link.py  get_info_music,py  get_video_info.py  models.py  search_music.py  search_youtube.py
tubemp3/tools/: get.py
tubemp3/trash/: getmusic.py
